# Kokoros

koko/: Cargo.toml
kokoros/: Cargo.toml
kokoros-openai/: Cargo.toml
kokoros-openai/src/: lib.rs
kokoros/src/onn/: ort_base.rs  ort_koko.rs
kokoros/src/tts/: koko.rs
scripts/: requirements.txt
