[package]
name = "koko"
version = "0.1.0"
edition = "2024"

[dependencies]
kokoros = { path = "../kokoros" }
kokoros-openai = { path = "../kokoros-openai" }

clap = { version = "4.5.41", features = ["derive"] }
tokio = { version = "1.46.1", features = ["io-util", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
