[package]
name = "koko"
version = "0.1.0"
edition = "2024"

[dependencies]
kokoros = { path = "../kokoros" }
kokoros-openai = { path = "../kokoros-openai" }

clap = { version = "4.5.53", features = ["derive"] }
tokio = { version = "1.48.0", features = ["io-util", "rt-multi-thread"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
