[package]
name = "kokoros-openai"
version = "0.1.0"
edition = "2024"

[dependencies]
kokoros = { path = "../kokoros" }

axum = { version = "0.8.7", features = ["http2"] }
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.7", features = ["cors", "trace"] }
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["v4"] }
regex = "1.12.2"
