[package]
name = "kokoros-openai"
version = "0.1.0"
edition = "2024"

[dependencies]
kokoros = { path = "../kokoros" }

axum = { version = "0.8.8", features = ["http2"] }
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
uuid = { version = "1.19.0", features = ["v4"] }
regex = "1.12.2"
