[package]
name = "kokoros"
version = "0.1.0"
edition = "2024"

[dependencies]
espeak-rs = "0.1.9"
hound = "3.5.1"
indicatif = "0.18.3"
ndarray = "0.17.1"
lazy_static = "1.5.0"
regex = "1.12.2"
reqwest = { version = "0.12.24" }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["fs", "io-util"] }
ndarray-npy = "0.9.1"
mp3lame-encoder = "0.2.1"
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["v4"] }
opus = "0.3.0"
ogg = "0.9.2"

# Base ONNX Runtime configuration
ort = { git = "https://github.com/pykeio/ort", branch = "main", default-features = true }

[features]
default = ["cpu"]
cpu = []
cuda = ["ort/cuda"]
