[package]
name = "kokoros"
version = "0.1.0"
edition = "2024"

[dependencies]
espeak-rs = "0.1.9"
hound = "3.5.1"
indicatif = "0.18.3"
ndarray = "0.17.2"
lazy_static = "1.5.0"
regex = "1.12.2"
reqwest = { version = "0.13.1" }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["fs", "io-util"] }
ndarray-npy = { git = "https://github.com/jturner314/ndarray-npy", branch = "master" }
mp3lame-encoder = "0.2.2"
tracing = "0.1.44"
uuid = { version = "1.19.0", features = ["v4"] }
# opus = "0.3.1"
ogg = "0.9.2"

# Base ONNX Runtime configuration
ort = { git = "https://github.com/pykeio/ort", branch = "main", default-features = true }

[features]
default = ["cpu"]
cpu = []
cuda = ["ort/cuda"]
